Update harvester/infomedia to use new creator-detector service